--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
             </p> 
 
             <p> <input type="button" value="Verify BMI" onclick="verify()" >
-
+<input type="button" value="Reset" onClick="window.location.reload();" class="verify">
             </p>
+
         </div>
 
         <div id="res2"> Fill all spaces above to know the result! </div>
