Bug fix: weight validation

--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
         </div>
 
         <div id="res2"> Fill all spaces above to know the result! </div>
-        <div id="res"> 
-            
-        </div>
+        <div id="res"> </div>
         <div id="res3"> </div>
         
     </section>
